# SceShaccCgExt

./: CMakeLists.txt  Makefile  README.md
include/: sce_intrinsics.h  shacccg_ext.h
src/: shacccg_ext.c  shacccg_ext_oop.cpp
